<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"

            android:title="@string/menu_trangChu" />

        <item
            android:id="@+id/nav_product"

            android:title="@string/menu_sanPham" />
        <item
            android:id="@+id/nav_introduce"

            android:title="@string/menu_gioiThieu" />
        <item
        android:id="@+id/nav_project"

        android:title="@string/menu_duAn" />
        <item
            android:id="@+id/nav_news"

            android:title="@string/menu_tinTuc" />
        <item
            android:id="@+id/nav_promotion"

            android:title="@string/menu_khuyenMai" />
        <item
            android:id="@+id/nav_contact"

            android:title="@string/menu_lienHe" />
        <item
            android:id="@+id/nav_recruitment"

            android:title="@string/menu_tuyenDung" />
        <item
            android:id="@+id/nav_pay"

            android:title="@string/menu_PTthanhToan" />

    </group>
</menu>
